--- a/hypothesis_test.ipynb
+++ b/hypothesis_test.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,19 +50,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Proportions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "This example shows how to perform frequentist A/B test based on simulated data with Group `A` (Control) at 10% conversion rate and Group `B` (Test) at 12% conversion rate. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +193,7 @@
        "59              58944         5890         6993     0.098985     0.118638  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +351,7 @@
        "3               3275          403          393     0.099580     0.120000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +436,7 @@
        "(0.09035443408810212, 0.10880543742165819)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +457,7 @@
        "(0.10887053218331917, 0.13112946781668083)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,9 +486,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nFill in the codes\\n'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "Fill in the codes\n",
@@ -513,19 +517,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Proportions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "This example shows how to perform Bayesian A/B test based on simulated data with Group `A` (Control) at 10% conversion rate and Group `B` (Test) at 12% conversion rate. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +660,7 @@
        "23               2209          234          252     0.094051     0.114079  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +825,7 @@
        "12         0.020314  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -951,13 +948,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nFill in the codes\\n'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "Fill in the codes\n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Conceptual Assignment** What are the pros and cons of frequentist vs Bayesian A/B tests?"
    ]
   },
   {
@@ -971,19 +986,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Proportions"
+    "We treat the problem of selecting the best variation as pulling the arm of the best slot machines. Here we use the simulation environment `MusketeerEnv` which returns the status of each arm in a form of the tuple `(impressions,clicks)`. The environment also keeps track of value remaining for stopping criteria."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We treat the problem of selecting the best variation as pulling the arm of the best slot machines. Here we use the simulation environment `MusketeerEnv` which returns the status of each arm in a form of the tuple `(impressions,clicks)`. The environment also keeps track of value remaining for stopping criteria."
+    "### Environment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We simulate an environment is an arbitrary number of arms with a set of predefined true probability `true_p` and average number of impressions `avg_impression` per time period `t`. This environment mimics most content serving APIs which display each variation at the ratio `ps` as defined by experimenters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -992,18 +1014,239 @@
        "[(0, 0), (0, 0), (0, 0)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from michael.mab.env import MusketeerEnv\n",
-    "from michael.mab.agent import BanditAgent\n",
     "env = MusketeerEnv(true_ps = [0.12,0.13,0.14], avg_impressions=400)\n",
     "\n",
     "#starting scores for each arm\n",
     "env.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(143, 16), (145, 13), (124, 20)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#step with equal impressions\n",
+    "action =[0.33,0.33,0.34]\n",
+    "env.step(action)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>t</th>\n",
+       "      <th>rate_0</th>\n",
+       "      <th>rate_1</th>\n",
+       "      <th>rate_2</th>\n",
+       "      <th>impressions_0</th>\n",
+       "      <th>impressions_1</th>\n",
+       "      <th>impressions_2</th>\n",
+       "      <th>actions_0</th>\n",
+       "      <th>actions_1</th>\n",
+       "      <th>actions_2</th>\n",
+       "      <th>total_impressions</th>\n",
+       "      <th>total_actions</th>\n",
+       "      <th>total_rate</th>\n",
+       "      <th>opt_impressions</th>\n",
+       "      <th>opt_impressions_rate</th>\n",
+       "      <th>regret_rate</th>\n",
+       "      <th>regret</th>\n",
+       "      <th>value_remaining</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.111888</td>\n",
+       "      <td>0.089655</td>\n",
+       "      <td>0.16129</td>\n",
+       "      <td>143</td>\n",
+       "      <td>145</td>\n",
+       "      <td>124</td>\n",
+       "      <td>16</td>\n",
+       "      <td>13</td>\n",
+       "      <td>20</td>\n",
+       "      <td>412</td>\n",
+       "      <td>49</td>\n",
+       "      <td>0.118932</td>\n",
+       "      <td>124</td>\n",
+       "      <td>0.300971</td>\n",
+       "      <td>0.042358</td>\n",
+       "      <td>17.451613</td>\n",
+       "      <td>0.182552</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   t    rate_0    rate_1   rate_2  impressions_0  impressions_1  \\\n",
+       "0  1  0.111888  0.089655  0.16129            143            145   \n",
+       "\n",
+       "   impressions_2  actions_0  actions_1  actions_2  total_impressions  \\\n",
+       "0            124         16         13         20                412   \n",
+       "\n",
+       "   total_actions  total_rate  opt_impressions  opt_impressions_rate  \\\n",
+       "0             49    0.118932              124              0.300971   \n",
+       "\n",
+       "   regret_rate     regret  value_remaining  \n",
+       "0     0.042358  17.451613         0.182552  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#see records\n",
+    "env.show_df()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to evaluate an MAB agent, we use 3 main metrics:\n",
+    "1. `opt_impressions_rate`: cumulative percentage of impressions we have given to the optimal arm at that timestep; this shows us how often we have picked the \"best\" arm\n",
+    "2. `regret_rate`: cumulative conversion rate of the best arm at that timestep minus cumulative conversion rate of all impressions; this shows us the difference in conversion rate we have lost by not picking the \"best\" arm\n",
+    "3. `regret`: cumulative actions if we had chosen the \"best\" arm minus actual cumulative conversions; this shows us how much actions we have lost by not picking the \"best\" arm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Coding Assignment** \n",
+    "1. Runs the `env` instance for 100 timestep with any proportion of impressions for Group 1, 2 and 3 that you want. Then perform an A/B test to see which group has the best cumulative conversion rate.\n",
+    "2. Calculate `opt_impression_rate`, `regret_rate` and `regret` using the dataframe you got from `env.show_df()` by yourself. See if it matches those given by the environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nFill in the codes\\n'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Fill in the codes\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Agent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An MAB agent solves the explore-vs-exploit dilemma. Exploitation means we choose what we know as the best choice at the current timestep, sometimes called being *greedy*; on the other hand, exploration means we try pulling other arms in order to know more about the environment. \n",
+    "\n",
+    "Exploiting 100% of the time is a bad idea. For instance; let us assume there are two arms `A` and `B` with true probabilities 0.1 and 0.9 and it happens that when we pull `A` it returns a conversion whereas when we pull `B` it does not. If our policy is to always exploit, we would end up pulling only `A` which has much lower return rate than `B`. This is when you do not have any experiment set up for your content at all.\n",
+    "\n",
+    "In contrast, if we always explore, we would end up pulling both arms randomly with expected return rates of $0.9 * 0.5 + 0.1 * 0.5 = 0.5$ instead of much higher if we could find out `B` is the better arm. This is close to what happens in a traditional A/B test during the test period.\n",
+    "\n",
+    "Some common policies for distributing impressions to each arm are:\n",
+    "1. **Equal weights**: all arms have the same amount of traffic or a fixed amount.\n",
+    "2. **Randomize**: randomly assign traffic to all arms.\n",
+    "3. **Epsilon-greedy**: Assign a majority of traffic to the \"best\" arm at that time step, and the rest randomized among all arms; the degree of random traffic can be decayed by a parameter `gamma` as time goes on.\n",
+    "4. **Softmax or Boltzmann exploration**: Assigns traffic equal to the softmax activation of their current return rates; regulated by temperature parameter `tau` (lower `tau` means less exploration) that can also be decayed by `gamma` over time.\n",
+    "$$P(A_i) = \\frac{e^{rate_i/\\tau}}{\\sum{e^{rate_i/\\tau}}}$$\n",
+    "\n",
+    "5. **Upper Confidence Bound**: by utilizing Hoeffding’s Inequality, we can have a deterministic policy based on number of times the arms are pulled so far and impressions of each arm:\n",
+    "\n",
+    "$$A = argmax(rate_i + \\sqrt{\\frac{2\\log{t}}{impressions_i}})$$\n",
+    "\n",
+    "6. **Deterministic Thompson Sampling**: based on a posterior distribution (in our case a Beta distribution) for each arm, sample that number of rates. Choose the arm with the highest sampled rate.\n",
+    "\n",
+    "7. **Stochastic Thompson Sampling**: Instead of sampling only once, perform a Monte Carlo simulation for an arbitrary number of times, the traffic to each arm is divided by the percentage of times that arm is the best arm in the simulation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Coding Assignment** Implement `equal_weights`, `randomize`, `eps_greedy` and `softmax` policies in the agent below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BanditAgent:\n",
+    "    def __init__(self,a=1,b=1):\n",
+    "        self.a=a\n",
+    "        self.b=b\n",
+    "    #baselines\n",
+    "    def equal_weights(self,state):\n",
+    "        pass\n",
+    "    def randomize(self,state):\n",
+    "        pass\n",
+    "    \n",
+    "    #stochastic policies\n",
+    "    def eps_greedy(self, state, t, start_eps=0.3, end_eps=0.01, gamma=0.99):\n",
+    "        pass\n",
+    "    def softmax(self, state, t, start_tau=1e-1, end_tau=1e-4, gamma=0.9):\n",
+    "        pass"
    ]
   },
   {
@@ -1037,6 +1280,7 @@
    ],
    "source": [
     "#initiate agent with priors\n",
+    "from michael.mab.agent import BanditAgent\n",
     "a = BanditAgent(a=1,b=9)\n",
     "\n",
     "#warm up the environment with 20 episodes of equal-weight actions\n",
