--- a/predict_price.ipynb
+++ b/predict_price.ipynb
@@ -9,6 +9,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #install pythainlp 2.1\n",
+    "# !pip install --upgrade --pre pythainlp"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [],
