Fix problem where qgrid does not display in Jupyter notebook
Instructions:

1. Run the following code block (install, nbextension enable).
2. Shutdown Jupyter Notebook Server

Reference: https://github.com/quantopian/qgrid/issues/253

--- a/clean.ipynb
+++ b/clean.ipynb
@@ -15,6 +15,7 @@
    "source": [
     "# !pip install qgrid\n",
     "# !jupyter nbextension enable --py --sys-prefix qgrid"
+    "# !jupyter nbextension enable --py widgetsnbextension"
    ]
   },
   {
