--- a/clean.ipynb
+++ b/clean.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "# !pip install qgrid\n",
-    "# !jupyter nbextension enable --py --sys-prefix qgrid"
+    "# !jupyter nbextension enable --py --sys-prefix qgrid\n",
     "# !jupyter nbextension enable --py widgetsnbextension"
    ]
   },
