Fix Thai font issue where Thai characters doesn't display correctly in matplotlib
Changes:

- Add TH Sarabun NEW to this repository
- Update code blocks that import Thai font to plotnine
in explore.ipynb and predict_price.ipynb

(code snippet by @korakot)

ref: https://gist.github.com/korakot/01d181229b21411b0a20784e0ca20d3d

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -54,15 +54,15 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "Snippet for plotnine with thai font by @korakot\n",
+    "Snippet for plotnine with Thai font by @korakot\n",
     "https://gist.github.com/korakot/01d181229b21411b0a20784e0ca20d3d\n",
     "'''\n",
-    "import matplotlib\n",
-    "# !wget https://github.com/Phonbopit/sarabun-webfont/raw/master/fonts/thsarabunnew-webfont.ttf -q\n",
-    "# !cp thsarabunnew-webfont.ttf /usr/share/fonts/truetype/\n",
-    "matplotlib.font_manager._rebuild()\n",
-    "matplotlib.rc('font', family ='TH Sarabun New')\n",
-    "theme_set(theme_minimal(11, 'TH Sarabun New'));"
+    "\n",
+    "from plotnine import *\n",
+    "import matplotlib.font_manager as fm\n",
+    "\n",
+    "fm.fontManager.ttflist += fm.createFontList(['thsarabunnew-webfont.ttf'])\n",
+    "theme_set(theme_gray(11, 'TH Sarabun New'))"
    ]
   },
   {
