Add commands to install all required libs with conda, and pip

--- a/clean.ipynb
+++ b/clean.ipynb
@@ -13,7 +13,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install qgrid\n",
+    "# install with conda\n",
+    "# !conda install -y -c conda-forge --file requirements.txt\n",
+    "# or install with pip\n",
+    "# !pip install -r requirements.txt\n",
+    "# enable qgrid\n",
     "# !jupyter nbextension enable --py --sys-prefix qgrid\n",
     "# !jupyter nbextension enable --py widgetsnbextension"
    ]
