Adding magic cmd line for running on Colab

--- a/clean.ipynb
+++ b/clean.ipynb
@@ -13,6 +13,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # running on colab\n",
+    "# !git clone https://github.com/vistec-AI/wangchan-analytica.git\n",
+    "# %cd wangchan-analytica/\n",
+    "# !pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# install with conda\n",
     "# !conda install -y -c conda-forge --file requirements.txt\n",
     "# or install with pip\n",
@@ -2776,7 +2788,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
