--- a/hypothesis_test.ipynb
+++ b/hypothesis_test.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This example shows how to perform frequentist A/B test based on simulated data with Group `A` (Control) at 10% conversion rate and Group `B` (Test) at 12% conversion rate. "
+    "This example shows how to perform frequentist A/B test based on simulated data with Machine `A` (Control) at 10% yield and Group `B` (Test) at 12% yield. "
    ]
   },
   {
@@ -217,6 +217,7 @@
     "                          lmh = [500,1000,1500],\n",
     "                          scaler=300,\n",
     "                          seed = 1412) #god-mode \n",
+    "result.columns = ['timesteps', 'input_a', 'input_b', 'output_a', 'output_b', 'cumu_input_a', 'cumu_input_b', 'cumu_output_a', 'cumu_output_b', 'cumu_yield_a', 'cumu_yield_b']\n",
     "result.tail()"
    ]
   },
@@ -246,7 +247,7 @@
     "                                      p  = 0.1, #expected probability under null hypothesis i.e. everything is same as A at 10%,\n",
     "                                      alpha = 0.05 #acceptable alpha that we will reject the null hypothesis\n",
     "                                     )\n",
-    "print(f'We need at least {required_samples} impressions in each group to detect the minimum difference of {int(100*mde)}% in conversion rate.')"
+    "print(f'We need at least {required_samples} input in each group to detect the minimum difference of {int(100*mde)}% in conversion rate.')"
    ]
   },
   {
@@ -369,7 +370,7 @@
     }
    ],
    "source": [
-    "result_trunc = result[result.cumu_impression_a<required_samples]\n",
+    "result_trunc = result[result.cumu_input_a<required_samples]\n",
     "result_trunc.tail() #we see that we should have stopped at timestep much earlier than we did"
    ]
   },
@@ -406,8 +407,8 @@
     }
    ],
    "source": [
-    "c1,c2 = result_trunc.loc[result_trunc.shape[0]-1,'cumu_conv_a'],result_trunc.loc[result_trunc.shape[0]-1,'cumu_conv_b']\n",
-    "n1,n2 = result_trunc.loc[result_trunc.shape[0]-1,'cumu_impression_a'],result_trunc.loc[result_trunc.shape[0]-1,'cumu_impression_b']\n",
+    "c1,c2 = result_trunc.loc[result_trunc.shape[0]-1,'cumu_output_a'],result_trunc.loc[result_trunc.shape[0]-1,'cumu_output_b']\n",
+    "n1,n2 = result_trunc.loc[result_trunc.shape[0]-1,'cumu_input_a'],result_trunc.loc[result_trunc.shape[0]-1,'cumu_input_b']\n",
     "\n",
     "proportion_plot(c1,c2,n1,n2, alpha=0.05, mode='one_sided')"
    ]
@@ -684,6 +685,7 @@
     "                          lmh = [50,100,150],\n",
     "                          scaler=300,\n",
     "                          seed = 1412) #god-mode \n",
+    "result.columns = ['timesteps', 'input_a', 'input_b', 'output_a', 'output_b', 'cumu_input_a', 'cumu_input_b', 'cumu_output_a', 'cumu_output_b', 'cumu_yield_a', 'cumu_yield_b']\n",
     "result.tail()"
    ]
   },
@@ -848,8 +850,8 @@
     "q = 95\n",
     "threshold = 0.01\n",
     "\n",
-    "result['value_remaining'] = result.apply(lambda row: value_remaining([row['cumu_conv_a'],row['cumu_conv_b']],\n",
-    "                                                                     [row['cumu_impression_a'],row['cumu_impression_b']],\n",
+    "result['value_remaining'] = result.apply(lambda row: value_remaining([row['cumu_output_a'],row['cumu_output_b']],\n",
+    "                                                                     [row['cumu_input_a'],row['cumu_input_b']],\n",
     "                                                                     [a,a],[b,b],q,sim_size),1)\n",
     "result_trunc = result[result.value_remaining>threshold]\n",
     "result_trunc.tail()"
@@ -890,8 +892,8 @@
     }
    ],
    "source": [
-    "c1,c2 = result_trunc.loc[result_trunc.shape[0]-1,'cumu_conv_a'],result_trunc.loc[result_trunc.shape[0]-1,'cumu_conv_b']\n",
-    "n1,n2 = result_trunc.loc[result_trunc.shape[0]-1,'cumu_impression_a'],result_trunc.loc[result_trunc.shape[0]-1,'cumu_impression_b']\n",
+    "c1,c2 = result_trunc.loc[result_trunc.shape[0]-1,'cumu_output_a'],result_trunc.loc[result_trunc.shape[0]-1,'cumu_output_b']\n",
+    "n1,n2 = result_trunc.loc[result_trunc.shape[0]-1,'cumu_input_a'],result_trunc.loc[result_trunc.shape[0]-1,'cumu_input_b']\n",
     "\n",
     "proportion_plot_b(c1,c2,n1,n2,0.05,'ratio',a,a,b,b,sim_size)"
    ]
@@ -1387,7 +1389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   },
   "toc": {
    "base_numbering": 1,
